@@ -1,3 +1,5 @@
+- Added wildcard handling to bg-installer.
+
 - Added reversed IPv4 formatting functions (from Jorge Valdes).
 
 - Added str_end* and str_case_end* functions, parallel to str_start* and
